[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ballxpit-save-editor"
version = "0.1.0"
description = "Unofficial BALL x PIT save editor focused on safe harvest respecs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Open Source Contributors"}
]
dependencies = []

[project.scripts]
ballxpit-save-editor = "ballxpit_save_editor.editor:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
